k8_demo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp-nexus-svc
spec:
  selector:
    app: ocp-nexus
  ports:
  - port: 8081
    targetPort: 8081
