k8_demo_ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ocp-nexus
  labels:
    app: ocp-nexus
spec:
  rules:
    - host: ocp-nexus-demo-solution.<apps.openshit url>
      http:
        paths:
          - path: /
            backend:
              serviceName: ocp-nexus-svc
              servicePort: 8081
